GraphCodeBERT/clonedetection/code/parser/tree-sitter-c-sharp/corpus/statements.txt
================================================================================
Return constant
================================================================================

class A {
  int Sample() {
    return 1;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (return_statement
            (integer_literal)))))))

================================================================================
Return nothing
================================================================================

class A {
  void Sample() {
    return;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (return_statement))))))

================================================================================
Break statement
================================================================================

class A {
  void Sample() {
    while (true) break;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (while_statement
            (boolean_literal)
            (break_statement)))))))

================================================================================
Continue statement
================================================================================

class A {
  void Sample() {
    while (false) continue;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (while_statement
            (boolean_literal)
            (continue_statement)))))))

================================================================================
Throw nothing
================================================================================

class A {
  void Sample() {
    throw;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (throw_statement))))))

================================================================================
Throw exception
================================================================================

class A {
  void Sample() {
    throw ex;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (throw_statement
            (identifier)))))))

================================================================================
Do while
================================================================================

class A {
  void Sample(bool a) {
    do { } while (a);
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (predefined_type)
            name: (identifier)))
        body: (block
          (do_statement
            (block)
            (identifier)))))))

================================================================================
Goto statement and label
================================================================================

class A {
  void Sample() {
    goto end;
    end:
      return;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (goto_statement
            (identifier))
          (labeled_statement
            (identifier)
            (return_statement)))))))

================================================================================
If statement
================================================================================

class A {
  int Sample() {
    if (true) return 1;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (if_statement
            condition: (boolean_literal)
            consequence: (return_statement
              (integer_literal))))))))

================================================================================
If Else statement
================================================================================

class A {
  int Sample() {
    if (true) return 1;
    else return 0;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (if_statement
            condition: (boolean_literal)
            consequence: (return_statement
              (integer_literal))
            alternative: (return_statement
              (integer_literal))))))))

================================================================================
Switch statement
================================================================================

class A {
  int Sample(int a) {
    switch (a) {
      case 1:
      case 2:
        return 0;
      default: {
        return 1;
      }
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (predefined_type)
            name: (identifier)))
        body: (block
          (switch_statement
            value: (identifier)
            body: (switch_body
              (switch_section
                (case_switch_label
                  (integer_literal))
                (case_switch_label
                  (integer_literal))
                (return_statement
                  (integer_literal)))
              (switch_section
                (default_switch_label)
                (block
                  (return_statement
                    (integer_literal)))))))))))

================================================================================
Declared tuple type with default
================================================================================

(string a, bool b) c = default;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (tuple_type
          (tuple_element
            type: (predefined_type)
            name: (identifier))
          (tuple_element
            type: (predefined_type)
            name: (identifier)))
        (variable_declarator
          name: (identifier)
          (equals_value_clause
            (default_expression)))))))

================================================================================
Declaration with generic type
================================================================================

A<B> a = null;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (generic_name
          name: (identifier)
          type_arguments: (type_argument_list
            (identifier)))
        (variable_declarator
          name: (identifier)
          (equals_value_clause
            (null_literal)))))))

================================================================================
Assignment and declaration in same deconstruction
================================================================================

int x = 0;
(x, int y) = point;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (predefined_type)
        (variable_declarator
          name: (identifier)
          (equals_value_clause
            (integer_literal))))))
  (global_statement
    (expression_statement
      (assignment_expression
        left: (tuple_expression
          (argument
            (identifier))
          (argument
            (declaration_expression
              type: (predefined_type)
              name: (identifier))))
        (assignment_operator)
        right: (identifier)))))

================================================================================
Invocation with inline tuple_type declaration
================================================================================

M(out (int a, int b) c);

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (invocation_expression
        function: (identifier)
        arguments: (argument_list
          (argument
            (declaration_expression
              type: (tuple_type
                (tuple_element
                  type: (predefined_type)
                  name: (identifier))
                (tuple_element
                  type: (predefined_type)
                  name: (identifier)))
              name: (identifier))))))))

================================================================================
Returning tuples
================================================================================

void M() {
  (bool a, bool b) M2() {
    return (true, false);
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_function_statement
          type: (tuple_type
            (tuple_element
              type: (predefined_type)
              name: (identifier))
            (tuple_element
              type: (predefined_type)
              name: (identifier)))
          name: (identifier)
          parameters: (parameter_list)
          body: (block
            (return_statement
              (tuple_expression
                (argument
                  (boolean_literal))
                (argument
                  (boolean_literal))))))))))

================================================================================
Inferred tuples
================================================================================

var result = list.Select(c => (c.f1, c.f2)).Where(t => t.f2 == 1);

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (implicit_type)
        (variable_declarator
          name: (identifier)
          (equals_value_clause
            (invocation_expression
              function: (member_access_expression
                expression: (invocation_expression
                  function: (member_access_expression
                    expression: (identifier)
                    name: (identifier))
                  arguments: (argument_list
                    (argument
                      (lambda_expression
                        parameters: (implicit_parameter_list
                          (parameter
                            name: (identifier)))
                        body: (tuple_expression
                          (argument
                            (member_access_expression
                              expression: (identifier)
                              name: (identifier)))
                          (argument
                            (member_access_expression
                              expression: (identifier)
                              name: (identifier))))))))
                name: (identifier))
              arguments: (argument_list
                (argument
                  (lambda_expression
                    parameters: (implicit_parameter_list
                      (parameter
                        name: (identifier)))
                    body: (binary_expression
                      left: (member_access_expression
                        expression: (identifier)
                        name: (identifier))
                      right: (integer_literal))))))))))))

================================================================================
Switch statement with tuple
================================================================================

class A {
  int Sample(int a) {
    switch (a, a) {
      case (1, 1):
        return 1;
      default:
        return 0;
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (predefined_type)
            name: (identifier)))
        body: (block
          (switch_statement
            value: (tuple_expression
              (argument
                (identifier))
              (argument
                (identifier)))
            body: (switch_body
              (switch_section
                (case_switch_label
                  (tuple_expression
                    (argument
                      (integer_literal))
                    (argument
                      (integer_literal))))
                (return_statement
                  (integer_literal)))
              (switch_section
                (default_switch_label)
                (return_statement
                  (integer_literal))))))))))

================================================================================
switch on positional pattern with when clause
================================================================================

switch (A, B)
{
    case (_, _) when !c:
      break;
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (switch_statement
      value: (tuple_expression
        (argument
          (identifier))
        (argument
          (identifier)))
      body: (switch_body
        (switch_section
          (case_pattern_switch_label
            (recursive_pattern
              (positional_pattern_clause
                (subpattern
                  (discard))
                (subpattern
                  (discard))))
            (when_clause
              (prefix_unary_expression
                (identifier))))
          (break_statement))))))

================================================================================
switch on property pattern with when clause
================================================================================

switch (A)
{
    case {Length: 2} when !c:
      break;
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (switch_statement
      value: (identifier)
      body: (switch_body
        (switch_section
          (case_pattern_switch_label
            (recursive_pattern
              (property_pattern_clause
                (subpattern
                  (expression_colon
                    (identifier))
                  (constant_pattern
                    (integer_literal)))))
            (when_clause
              (prefix_unary_expression
                (identifier))))
          (break_statement))))))

================================================================================
switch on type pattern with when clause
================================================================================

int i = 123;
switch (i)
{
    case int when i < 5:
        break;
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (predefined_type)
        (variable_declarator
          name: (identifier)
          (equals_value_clause
            (integer_literal))))))
  (global_statement
    (switch_statement
      value: (identifier)
      body: (switch_body
        (switch_section
          (case_pattern_switch_label
            (type_pattern
              type: (predefined_type))
            (when_clause
              (binary_expression
                left: (identifier)
                right: (integer_literal))))
          (break_statement))))))

================================================================================
Try finally statement
================================================================================

class A {
  void Sample() {
    try {
    } finally {
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (try_statement
            body: (block)
            (finally_clause
              (block))))))))

================================================================================
Try catch statement
================================================================================

class A {
  void Sample() {
    try {
    } catch (Exception ex) {
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (try_statement
            body: (block)
            (catch_clause
              (catch_declaration
                type: (identifier)
                name: (identifier))
              body: (block))))))))

================================================================================
Try catch finally statement
================================================================================

class A {
  void Sample() {
    try {
    } catch (Exception ex) {
    } finally {
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (try_statement
            body: (block)
            (catch_clause
              (catch_declaration
                type: (identifier)
                name: (identifier))
              body: (block))
            (finally_clause
              (block))))))))

================================================================================
Try catch multiple statement
================================================================================

class A {
  void Sample() {
    try {
    } catch (Exception ex) {
    } catch (OtherException ex) {
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (try_statement
            body: (block)
            (catch_clause
              (catch_declaration
                type: (identifier)
                name: (identifier))
              body: (block))
            (catch_clause
              (catch_declaration
                type: (identifier)
                name: (identifier))
              body: (block))))))))

================================================================================
Try catch filtered statement
================================================================================

class A {
  void Sample() {
    try {
    } catch (Exception ex) when (a == 1) {
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (try_statement
            body: (block)
            (catch_clause
              (catch_declaration
                type: (identifier)
                name: (identifier))
              (catch_filter_clause
                (binary_expression
                  left: (identifier)
                  right: (integer_literal)))
              body: (block))))))))

================================================================================
Checked statement
================================================================================

class A {
  void Sample() {
    checked {
      return;
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (checked_statement
            (block
              (return_statement))))))))

================================================================================
Unchecked statement
================================================================================

class A {
  void Sample() {
    unchecked {
      return;
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (checked_statement
            (block
              (return_statement))))))))

================================================================================
Lock statement
================================================================================

class A {
  void Sample() {
    lock (this) {
      return;
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (lock_statement
            (this_expression)
            (block
              (return_statement))))))))

================================================================================
Yield statement
================================================================================

class A {
  IEnumerable<int> Sample() {
    yield return 1;
    yield break;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (generic_name
          name: (identifier)
          type_arguments: (type_argument_list
            (predefined_type)))
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (yield_statement
            (integer_literal))
          (yield_statement))))))

================================================================================
Implicit local variable with literal initializer
================================================================================

class A {
  void Sample() {
    var a = 1;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_declaration_statement
            (variable_declaration
              type: (implicit_type)
              (variable_declarator
                name: (identifier)
                (equals_value_clause
                  (integer_literal))))))))))

================================================================================
Method with static local function block
================================================================================

class A {
  void Sample() {
    private void A<T1, T2>(T1 a, T2 b) where T1:I1 {
      return a + b;
    }

    [SomeAttribute]
    private static int X() {
      return 1;
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_function_statement
            (modifier)
            type: (predefined_type)
            name: (identifier)
            type_parameters: (type_parameter_list
              (type_parameter
                name: (identifier))
              (type_parameter
                name: (identifier)))
            parameters: (parameter_list
              (parameter
                type: (identifier)
                name: (identifier))
              (parameter
                type: (identifier)
                name: (identifier)))
            (type_parameter_constraints_clause
              target: (identifier)
              constraints: (type_parameter_constraint
                (type_constraint
                  type: (identifier))))
            body: (block
              (return_statement
                (binary_expression
                  left: (identifier)
                  right: (identifier)))))
          (local_function_statement
            (attribute_list
              (attribute
                name: (identifier)))
            (modifier)
            (modifier)
            type: (predefined_type)
            name: (identifier)
            parameters: (parameter_list)
            body: (block
              (return_statement
                (integer_literal)))))))))

================================================================================
Method with local expression bodied function
================================================================================

class A {
  void Sample() {
    void A<T1, T2>(T1 a, T2 b) => Test(a, b);
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_function_statement
            type: (predefined_type)
            name: (identifier)
            type_parameters: (type_parameter_list
              (type_parameter
                name: (identifier))
              (type_parameter
                name: (identifier)))
            parameters: (parameter_list
              (parameter
                type: (identifier)
                name: (identifier))
              (parameter
                type: (identifier)
                name: (identifier)))
            body: (arrow_expression_clause
              (invocation_expression
                function: (identifier)
                arguments: (argument_list
                  (argument
                    (identifier))
                  (argument
                    (identifier)))))))))))

================================================================================
Explicit local variable with no initializer
================================================================================

class A {
  void Sample() {
    int a;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_declaration_statement
            (variable_declaration
              type: (predefined_type)
              (variable_declarator
                name: (identifier)))))))))

================================================================================
Explicit local variables with multiple literal initializers
================================================================================

class A {
  void Sample() {
    int a = 1, b = 2;
  }
}

